[package]
name = "sdvconvertergui"
version = "0.0.9"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.20.1"
rfd = "0.10.1"
serde_json = "1.0.91"
tracing-subscriber = "0.3.16"
serde = { version = "1.0.130", features = ["derive"] }
reqwest = { version = "0.11.14", features = ["blocking"] }
zip = "0.6.3"
unicode-bom = "1.1.4"
